[package]
name = "stegano-core-clib"
version = "0.3.1"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
# stegano-core = { path = "../stegano-core" }
stegano-core = { git = "https://github.com/steganogram/core.stegano.org", branch = "master" }

[lib]
crate-type = ["cdylib"]
